--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <div class="logo"> DayCalc </div>
                 
                 <nav class = "nav">
-                    <a class="nav_link" href="main.html">Calculator</a>
+                    <a class="nav_link" href="index.html">Calculator</a>
                    
                 </nav>
             </div>
